--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
-    <meta charset="UTF-8" />
-    <title>웹카페</title>
-    <style>
-      .header {
-      }
-    </style>
+    <meta charset="UTF-8" >
+    <title>웹카페  WEB Cafe </title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
-      <header class="header">헤더</header>
+      <header class="header">
+        <h1 class="logo">
+          <a href="index.html">
+            <img src="images/logo.png" alt="Web Cafe">
+          </a>   
+        </h1> 
+        <ul class="member">
+          <li><a href="#">홈</a></li>
+          <li><a href="#">로그인</a></li>
+          <li><a href="#">회원가입</a></li>
+          <li><a href="#">사이트맵</a></li>
+          <li><a href="#">english</a></li>
+        </ul>   
+      </header>
       <div class="visual">비주얼</div>
       <main class="main">
-        <div class="group group1"></div>
-        <div class="group group2"></div>
-        <div class="group group3"></div>
+        <div class="group group1">그룹1</div>
+        <div class="group group2">그룹2</div>
+        <div class="group group3">그룹3</div>
       </main>
       <article class="slogan">슬로건</article>
       <div class="bg-footer">
