회원가입영역에 클래스 추가

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <main class="main">
         <div class="group group1">
           <section class="login">
-              <h2 class="loginheading">로그인</h2>
-              <form action="https://formspree.io/martlee21c@hanmail.net" method="POST">
+              <h2 class="login-heading">로그인</h2>
+              <form action="https://formspree.io/martlee21c@hanmail.net" method="POST" class="login-form">
                 <fieldset>
                   <legend>회원 로그인 폼</legend>
                   <div class="user-email">
@@ -147,10 +147,10 @@
                 </fieldset>  
               </form>
               <ul class="sign">
-                <li>
+                <li class="icon-right-open">
                   <a href="#">회원가입</a>
                 </li>
-                <li>
+                <li class="icon-right-open">
                   <a href="#">아이디/비밀번호찾기</a>
                 </li>
               </ul>
