--- a/index.html
+++ b/index.html
@@ -154,7 +154,18 @@
                   <a href="#">아이디/비밀번호찾기</a>
                 </li>
               </ul>
-          </section>    
+          </section>  
+          <section class="validation">
+            <h2 class="readable-hidden">유효성검사 베너</h2>
+            <ul class="validation-list">
+              <li>
+                <a href="https://validator.w3.org/" target="_blank" title="마크업 유효성 검사 사이트로 이동 새창열기">W3C Markup Validation</a>
+              </li>
+              <li>
+                  <a href="https://jigsaw.w3.org/css-validator/validator" target="_blank" title="CSS 유효성 검사 상사이트로 이동 새창열기">CSS V alidation Service</a>
+                </li>
+            </ul>
+          </section>  
         </div>
         <div class="group group2">그룹2</div>
         <div class="group group3">그룹3</div>
