--- a/index.html
+++ b/index.html
@@ -1,171 +1,222 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
-    <meta charset="UTF-8" >
-    <title>웹카페  WEB Cafe </title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <title>웹카페 WEB Cafe</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
       <header class="header">
         <h1 class="logo">
           <a href="index.html">
-            <img src="images/logo.png" alt="Web Cafe">
-          </a>   
-        </h1> 
+            <img src="images/logo.png" alt="Web Cafe" />
+          </a>
+        </h1>
         <ul class="member">
           <li><a href="#">홈</a></li>
           <li class="bar"><a href="#">로그인</a></li>
           <li class="bar"><a href="#">회원가입</a></li>
           <li class="bar"><a href="#">사이트맵</a></li>
           <li class="bar"><a href="#">english</a></li>
-        </ul>  
-        <nav class="navigation">
-         <h2 class="readable-hidden">메인 메뉴</h2>
-         <ul class="menu Clearfix">
-          <li class="menu-item menu-act" tabindex="0">
-            <span class="menu-item-text">HTML에 대해</span>
-            <ul class="sub-menu sub-menu1">
-              <li>
-                <a class="icon-dot-circled" href="#">HTML5 소개</a>
-              </li>
-              <li>
-                <a class="icon-dot-circled" href="#">레퍼런스 소개</a>
-              </li>
-              <li>
-                <a class="icon-dot-circled" href="#">활용예제</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item" tabindex="0">
-            <span class="menu-item-text">CSS에 대해</span>
-            <ul class="sub-menu sub-menu2">
-              <li>
-                <a href="#">CSS 소개</a>
-              </li>
-              <li>
-                <a href="#">CSS2 VS CSS3</a>
-              </li>
-              <li>
-                <a href="#">CSS 애니메이션</a>
-              </li>
-              <li>
-                <a href="#">CSS Framework</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item" tabindex="0">
-            <span class="menu-item-text">웹표준</span>
-            <ul class="sub-menu sub-menu3">
-              <li>
-                <a href="#">웹표준 이란?</a>
-              </li>
-              <li>
-                <a href="#">W3C</a>
-              </li>
-              <li>
-                <a href="#">HTML5의 현재와 미래</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item" tabindex="0">
-            <span class="menu-item-text">웹 접근성</span>
-            <ul class="sub-menu sub-menu4">
-              <li>
-                <a href="#">웹 접근성의 개요</a>
-              </li>
-              <li>
-                <a href="#">장애 환경의 이해</a>
-              </li>
-              <li>
-                <a href="#">장차법</a>
-              </li>
-              <li>
-                <a href="#">웹 접근성 품질마크</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item" tabindex="0">
-            <span class="menu-item-text">묻고 답하기</span>
-            <ul class="sub-menu sub-menu5">
-              <li>
-                <a href="#">묻고 답하기</a>
-              </li>
-              <li>
-                <a href="#">FAQ</a>
-              </li>
-              <li>
-                <a href="#">1대1 질문</a>
-              </li>
-              <li>
-                <a href="#">웹표준</a>
-              </li>
-              <li>
-                <a href="#">웹 접근성</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu-item" tabindex="0">
-            <span class="menu-item-text">자료실</span>
-            <ul class="sub-menu sub-menu6">
-              <li>
-                <a href="#">공개 자료실</a>
-              </li>
-              <li>
-                <a href="#">이미지 자료실</a>
-              </li>
-              <li>
-                <a href="#">웹표준 자료실</a>
-              </li>
-              <li>
-                <a href="#">웹 접근성 자료실</a>
-              </li>
-            </ul>
-          </li>
         </ul>
-        </nav> 
+        <nav class="navigation">
+          <h2 class="readable-hidden">메인 메뉴</h2>
+          <ul class="menu Clearfix">
+            <li class="menu-item menu-act" tabindex="0">
+              <span class="menu-item-text">HTML에 대해</span>
+              <ul class="sub-menu sub-menu1">
+                <li>
+                  <a class="icon-dot-circled" href="#">HTML5 소개</a>
+                </li>
+                <li>
+                  <a class="icon-dot-circled" href="#">레퍼런스 소개</a>
+                </li>
+                <li>
+                  <a class="icon-dot-circled" href="#">활용예제</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" tabindex="0">
+              <span class="menu-item-text">CSS에 대해</span>
+              <ul class="sub-menu sub-menu2">
+                <li>
+                  <a href="#">CSS 소개</a>
+                </li>
+                <li>
+                  <a href="#">CSS2 VS CSS3</a>
+                </li>
+                <li>
+                  <a href="#">CSS 애니메이션</a>
+                </li>
+                <li>
+                  <a href="#">CSS Framework</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" tabindex="0">
+              <span class="menu-item-text">웹표준</span>
+              <ul class="sub-menu sub-menu3">
+                <li>
+                  <a href="#">웹표준 이란?</a>
+                </li>
+                <li>
+                  <a href="#">W3C</a>
+                </li>
+                <li>
+                  <a href="#">HTML5의 현재와 미래</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" tabindex="0">
+              <span class="menu-item-text">웹 접근성</span>
+              <ul class="sub-menu sub-menu4">
+                <li>
+                  <a href="#">웹 접근성의 개요</a>
+                </li>
+                <li>
+                  <a href="#">장애 환경의 이해</a>
+                </li>
+                <li>
+                  <a href="#">장차법</a>
+                </li>
+                <li>
+                  <a href="#">웹 접근성 품질마크</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" tabindex="0">
+              <span class="menu-item-text">묻고 답하기</span>
+              <ul class="sub-menu sub-menu5">
+                <li>
+                  <a href="#">묻고 답하기</a>
+                </li>
+                <li>
+                  <a href="#">FAQ</a>
+                </li>
+                <li>
+                  <a href="#">1대1 질문</a>
+                </li>
+                <li>
+                  <a href="#">웹표준</a>
+                </li>
+                <li>
+                  <a href="#">웹 접근성</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" tabindex="0">
+              <span class="menu-item-text">자료실</span>
+              <ul class="sub-menu sub-menu6">
+                <li>
+                  <a href="#">공개 자료실</a>
+                </li>
+                <li>
+                  <a href="#">이미지 자료실</a>
+                </li>
+                <li>
+                  <a href="#">웹표준 자료실</a>
+                </li>
+                <li>
+                  <a href="#">웹 접근성 자료실</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </header>
       <div class="visual">
-        <p class="visual-text">Web Standards &amp; Accessibility</p>        
+        <p class="visual-text">Web Standards &amp; Accessibility</p>
       </div>
       <main class="main">
         <div class="group group1">
           <section class="login">
-              <h2 class="login-heading">로그인</h2>
-              <form action="https://formspree.io/martlee21c@hanmail.net" method="POST" class="login-form">
-                <fieldset>
-                  <legend>회원 로그인 폼</legend>
-                  <div class="user-email">
-                    <label for="user-email">아이디</label>
-                    <input type="email" id="user-email" name="id" required placeholder="이메일주소">
-                  </div>
-                  <div class="user-pw">
-                    <label for="user-pw">비밀번호</label>
-                    <input type="password" id="user-pw" name="password" required placeholder="8자리 이상">
-                  </div>
-                  <button type="submit" class="btn-login">로그인</button>
-                </fieldset>  
-              </form>
-              <ul class="sign">
-                <li class="icon-right-open">
-                  <a href="#">회원가입</a>
-                </li>
-                <li class="icon-right-open">
-                  <a href="#">아이디/비밀번호찾기</a>
-                </li>
-              </ul>
-          </section>  
+            <h2 class="login-heading">로그인</h2>
+            <form
+              action="https://formspree.io/martlee21c@hanmail.net"
+              method="POST"
+              class="login-form"
+            >
+              <fieldset>
+                <legend>회원 로그인 폼</legend>
+                <div class="user-email">
+                  <label for="user-email">아이디</label>
+                  <input
+                    type="email"
+                    id="user-email"
+                    name="id"
+                    required
+                    placeholder="이메일주소"
+                  />
+                </div>
+                <div class="user-pw">
+                  <label for="user-pw">비밀번호</label>
+                  <input
+                    type="password"
+                    id="user-pw"
+                    name="password"
+                    required
+                    placeholder="8자리 이상"
+                  />
+                </div>
+                <button type="submit" class="btn-login">로그인</button>
+              </fieldset>
+            </form>
+            <ul class="sign">
+              <li class="icon-right-open">
+                <a href="#">회원가입</a>
+              </li>
+              <li class="icon-right-open">
+                <a href="#">아이디/비밀번호찾기</a>
+              </li>
+            </ul>
+          </section>
           <section class="validation">
             <h2 class="readable-hidden">유효성검사 베너</h2>
             <ul class="validation-list">
               <li>
-                <a href="https://validator.w3.org/" target="_blank" title="마크업 유효성 검사 사이트로 이동 새창열기">W3C Markup Validation</a>
+                <a
+                  href="https://validator.w3.org/"
+                  target="_blank"
+                  title="마크업 유효성 검사 사이트로 이동 새창열기"
+                  >W3C Markup Validation</a
+                >
               </li>
               <li>
-                  <a href="https://jigsaw.w3.org/css-validator/validator" target="_blank" title="CSS 유효성 검사 상사이트로 이동 새창열기">CSS V alidation Service</a>
-                </li>
+                <a
+                  href="https://jigsaw.w3.org/css-validator/validator"
+                  target="_blank"
+                  title="CSS 유효성 검사 상사이트로 이동 새창열기"
+                  >CSS V alidation Service</a
+                >
+              </li>
             </ul>
-          </section>  
+          </section>
+          <section class="term">
+            <h2 class="term-heading">웹관련 용어</h2>
+            <dl class="term-list">
+              <div class="clearfix">
+                <dt class="term-list-subject">웹 표준이란?</dt>
+                <dd class="term-list-thumbnail">
+                  <img src="images/web_standards.gif" alt="" />
+                </dd>
+                <dd class="term-list-brief">
+                  W3 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준
+                  규격은...
+                </dd>
+              </div>
+              <!-- <div class="clearfix even">
+                <dt class="term-list-subject">웹 표준이란?</dt>
+                <dd class="term-list-thumbnail">
+                  <img src="images/web_standards.gif" alt="" />
+                </dd>
+                <dd class="term-list-brief">
+                  W3 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하며 표준
+                  규격은...
+                </dd>
+              </div> -->
+            </dl>
+          </section>
         </div>
         <div class="group group2">그룹2</div>
         <div class="group group3">그룹3</div>
