--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <h2 class="event-heading">신규<span>이벤트</span></h2>
             <div class="event-detail">
               <p class="event-thumbnail"><img src="images/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심 사이드북 2 html 5+CSS3 도서증정"></p>
-              <p class="event-brief"><em>웹표준 핵심 가이드북2 출시!</em> 선착순 500명  gkswjddmfhwmdtjd</p> 
+              <p class="event-brief"><em>웹표준 핵심 가이드북 2 출시!</em>선착순 500명 한정으로 증정.</p>
             </div>
             <div class="btn-event">
               <button class="btn-event-prev">이전이벤트 보기</button>
@@ -316,12 +316,12 @@
           </section>
           <section class="related">
             <h2 class="related-heading">관련<span>사이트</span></h2>
-            <ul class="related-list">
+            <ul class="related-list" tabindex="0"><!--tabindex="0" 탭에반응 -->
               <li><a href="#">멀티켐퍼스</a></li>
               <li><a href="#">w3c</a></li>
               <li><a href="#">웹접근성연구소</a></li>
               <li><a href="#">CSSsㅇㅇㅇ</a></li>
-              <li><a href="#">Webㅇㅇㅇ</a></li>
+              <li><a href="#">Web standars/a></li>
             </ul>
           </section>
         </div>  
