인기사이크 마크업 완성

--- a/index.html
+++ b/index.html
@@ -302,29 +302,40 @@
           </section>
         </div>
         <div class="group group3">
-        <div class="event-related">
-          <section class="event">
-            <h2 class="event-heading">신규<span>이벤트</span></h2>
-            <div class="event-detail">
-              <p class="event-thumbnail"><img src="images/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심 사이드북 2 html 5+CSS3 도서증정"></p>
-              <p class="event-brief"><em>웹표준 핵심 가이드북 2 출시!</em>선착순 500명 한정으로 증정.</p>
-            </div>
-            <div class="btn-event">
-              <button class="btn-event-prev">이전이벤트 보기</button>
-              <button class="btn-event-next">다음 이벤트 보기</button>
-            </div>
-          </section>
-          <section class="related">
-            <h2 class="related-heading">관련<span>사이트</span></h2>
-            <ul class="related-list" tabindex="0"><!--tabindex="0" 탭에반응 -->
-              <li><a href="#">멀티켐퍼스</a></li>
-              <li><a href="#">w3c</a></li>
-              <li><a href="#">웹접근성연구소</a></li>
-              <li><a href="#">CSSsㅇㅇㅇ</a></li>
-              <li><a href="#">Web standars/a></li>
-            </ul>
-          </section>
-        </div>  
+          <div class="event-related">
+            <section class="event">
+              <h2 class="event-heading">신규<span>이벤트</span></h2>
+              <div class="event-detail">
+                <p class="event-thumbnail"><img src="images/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심 사이드북 2 html 5+CSS3 도서증정"></p>
+                <p class="event-brief"><em>웹표준 핵심 가이드북 2 출시!</em>선착순 500명 한정으로 증정.</p>
+              </div>
+              <div class="btn-event">
+                <button class="btn-event-prev">이전이벤트 보기</button>
+                <button class="btn-event-next">다음 이벤트 보기</button>
+              </div>
+            </section>
+            <section class="related">
+              <h2 class="related-heading">관련<span>사이트</span></h2>
+              <ul class="related-list" tabindex="0"><!--tabindex="0" 탭에반응 -->
+                <li><a href="#">멀티켐퍼스</a></li>
+                <li><a href="#">w3c</a></li>
+                <li><a href="#">웹접근성연구소</a></li>
+                <li><a href="#">CSSsㅇㅇㅇ</a></li>
+                <li><a href="#">Web standards</a></li>
+              </ul>
+            </section>
+          </div>  
+           <section class="favorite">
+             <h2 class="favorite-heading">인기<span>사이트</span></h2>
+             <ol class="favor-list">
+               <li><a href="#">W3C</a><em class="up">상승</em></li>
+               <li><a href="#">CSS ZenGarden</a><em class="up">하락</em></li>
+               <li><a href="#">MDN</a><em class="up">멈춤</em></li>
+               <li><a href="#">web StandadsDSs</a><em class="up">상승</em></li>
+             </ol>
+             <a href="" class="icon-plus favorite-more" title="인기 사이트">더보기</a>
+           </section> 
+
         </div>
       </main>
       <article class="slogan">슬로건</article>
