슬로건 및 푸터 마크업 완성

--- a/index.html
+++ b/index.html
@@ -321,16 +321,16 @@
                 <li><a href="#">w3c</a></li>
                 <li><a href="#">웹접근성연구소</a></li>
                 <li><a href="#">CSSsㅇㅇㅇ</a></li>
-                <li><a href="#">Web standards</a></li>
+                <li><a href="#">Web Standards</a></li>
               </ul>
             </section>
           </div>  
            <section class="favorite">
              <h2 class="favorite-heading">인기<span>사이트</span></h2>
-             <ol class="favor-list">
+             <ol class="favorite-list">
                <li><a href="#">W3C</a><em class="up">상승</em></li>
-               <li><a href="#">CSS ZenGarden</a><em class="up">하락</em></li>
-               <li><a href="#">MDN</a><em class="up">멈춤</em></li>
+               <li><a href="#">CSS ZenGarden</a><em class="down">하락</em></li>
+               <li><a href="#">MDN</a><em class="stop">멈춤</em></li>
                <li><a href="#">web StandadsDSs</a><em class="up">상승</em></li>
              </ol>
              <a href="" class="icon-plus favorite-more" title="인기 사이트">더보기</a>
@@ -338,9 +338,39 @@
 
         </div>
       </main>
-      <article class="slogan">슬로건</article>
+      <article class="slogan">
+        <h2 class="slogan-heading" title="웹카페에서 웹표준을">슬로건</h2>
+        <p class="slogan-content">
+          <q cite="http://w3.org/WAI">The power of the Web is in its universality, Access by everyone regardless of disability is an essential aspect.</q>
+          Tim Berners - Lee , W3C Director and inventor of the World Wide Web
+        </p>
+        <footer class="readable-hidden">
+          출처 : W3C, http://w3.org/WAI/
+        </footer>      
+      </article>
       <div class="bg-footer">
-        <footer class="footer">푸터</footer>
+        <footer class="footer">
+          <a href="#" class="footer-logo"><img src="images/footer_logo.png" alt="pweb cafe"></a>
+          <ul>
+              <li><a href="#">회사소개</a></li>
+              <li><a href="#">개인정보보호정핵</a></li>
+              <li><a href="#">이메일주소무단수집거부</a></li>
+              <li><a href="#">CONTACT US</a></li>
+              <li><a href="#">SITEMAP</a></li>
+          </ul>
+          <address class="address">
+            <span>전북 전주시 완산구 아중로 33</span>
+            <span>전화번호</span>
+            <span>이메일</span>
+          </address>
+          <small class="copyright">
+              Copyright since &copy; 2010 by Web Cafe CORPORATION ALL RIGHTS RESERVED.
+            </small>
+            <div class="badge">
+              <img src="images/html5_logo.png" alt="최신 표준인 HTML5를 사용하여 마크업 했습니다.">
+              <img src="images/css3_logo.png" alt="최신 기술인 CSS3를 활용하여 디자인 했습니다.">
+            </div>
+        </footer>
       </div>
     </div>
   </body>
