슬로건 및 푸터 마크업 완성

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       <div class="bg-footer">
         <footer class="footer">
           <a href="#" class="footer-logo"><img src="images/footer_logo.png" alt="pweb cafe"></a>
-          <ul>
+          <ul class="guide">
               <li><a href="#">회사소개</a></li>
               <li><a href="#">개인정보보호정핵</a></li>
               <li><a href="#">이메일주소무단수집거부</a></li>
